tests/paczka2/big_fuzzy/63023826.err
Error in line 2: rXIkm3Wv2A S534 10,2
Error in line 4: OmWh S380 5,1
Error in line 12: rXIkm3Wv2A S534 3,9
Error in line 11: OmWh S312 10,7
Error in line 18: OmWh S512 25,6
Error in line 38: AVj A490 19,12
Error in line 30: uZS S534 54,4
Error in line 39: uZS A490 47,9
Error in line 41: uZS S380 51,8
Error in line 43: uZS S312 97,2
Error in line 31: OmWh A490 8,2
Error in line 28: r1PRsRSrYh A490 119,5
Error in line 52: r1PRsRSrYh S534 24,9
Error in line 45: uZS A490 48,4
Error in line 53: AVj S534 72,0
Error in line 59: AVj A490 53,0
Error in line 65: r1PRsRSrYh A490 97,6
Error in line 82: OmWh S380 81,1
Error in line 87: m3IN54YbROp S380 10,5
Error in line 88: OmWh S312 15,5
Error in line 94: r1PRsRSrYh S524 46,2
Error in line 101: r1PRsRSrYh S534 61,6
Error in line 106: uZS S312 49,04
Error in line 99: OmWh S380 46,7
Error in line 104: rXIkm3Wv2A S380 47,6
Error in line 121: m3IN54YbROp A490 20,0
Error in line 128: uZS S534 66,8
Error in line 123: rXIkm3Wv2A S312 272,9
Error in line 139: m3IN54YbROp S380 -1,3
Error in line 140: r1PRsRSrYh S380 74,0
Error in line 130: rXIkm3Wv2A S380 95,1
Error in line 145: rXIkm3Wv2A S534 11,7
Error in line 124: m3IN54YbROp S380 68,2
Error in line 157: AVj S312 7,0
Error in line 158: AVj S534 11,5
Error in line 174: rXIkm3Wv2A S380 19,4
Error in line 178: rXIkm3Wv2A S312 12,9
Error in line 177: m3IN54YbROp S534 46,8
Error in line 183: rXIkm3Wv2A S380 19,6
Error in line 181: OmWh S312 4,5
Error in line 204: m3IN54YbROp S3c0 64,0
Error in line 202: m3IN54YbROp S380 22,3
Error in line 215: AVj S534 11,9
Error in line 216: AVj A490 69,7
Error in line 218: AVj S312 44,9
Error in line 227: OmWh S534 3,57
Error in line 228: r1PRsRSrYh S534 68,77
Error in line 231: r1PRsRSrYh S534 65,3
Error in line 230: m3IN54YbROp S380 8,6
Error in line 233: r1PRsRSrYh S312 5,1
Error in line 229: OmWh S380 81,0
